Background randomization now works appropriately.

--- a/modules/characters/client/views/creationSteps/character.creation.background.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.background.view.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <div class="row form-group" show-errors>
-    <label class="control-label" for="playableClass">Background</label>
+    <label class="control-label">Background</label>
     <div class="dropdown" dropdown>
       <button type="button" class="btn btn-default" dropdown-toggle>
         {{vm.chosenBackground.name}} <span class="caret"></span></button>
@@ -14,41 +14,41 @@
 </div>
 
 <div class="row form-group">
-  <label class="control-label" for="background.trait">Personality Trait</label>
+  <label class="control-label">Personality Trait</label>
   <p class="input-group" show-errors>
     <input name="trait" type="text" ng-model="vm.character.background.trait" id="trait" class="form-control" placeholder="Personality Trait"></input>
     <span class="input-group-btn">
-      <button type="button" class="btn btn-default" ><i class="fa fa-random"></i></button>
+      <button type="button" class="btn btn-default"  ng-click="vm.randomizeBackground('trait')"><i class="fa fa-random"></i></button>
     </span>
   </p>
 </div>
 
 <div class="row form-group">
-  <label class="control-label" for="background.ideal">Ideology</label>
+  <label class="control-label">Ideology</label>
   <p class="input-group" show-errors>
     <input name="ideal" type="text" ng-model="vm.character.background.ideal" id="ideal" class="form-control" placeholder="Ideology"></input>
     <span class="input-group-btn">
-      <button type="button" class="btn btn-default" ><i class="fa fa-random"></i></button>
+      <button type="button" class="btn btn-default" ng-click="vm.randomizeBackground('ideal')"><i class="fa fa-random"></i></button>
     </span>
   </p>
 </div>
 
 <div class="row form-group">
-  <label class="control-label" for="background.bond">Bond</label>
+  <label class="control-label">Bond</label>
   <p class="input-group" show-errors>
     <input name="bond" type="text" ng-model="vm.character.background.bond" id="bond" class="form-control" placeholder="Bond"></input>
     <span class="input-group-btn">
-      <button type="button" class="btn btn-default" ><i class="fa fa-random"></i></button>
+      <button type="button" class="btn btn-default"  ng-click="vm.randomizeBackground('bond')"><i class="fa fa-random"></i></button>
     </span>
   </p>
 </div>
 
 <div class="row form-group">
-  <label class="control-label" for="background.flaw">Character Flaw</label>
+  <label class="control-label">Character Flaw</label>
   <p class="input-group" show-errors>
     <input name="flaw" type="text" ng-model="vm.character.background.flaw" id="flaw" class="form-control" placeholder="Character Flaw"></input>
     <span class="input-group-btn">
-      <button type="button" class="btn btn-default" ><i class="fa fa-random"></i></button>
+      <button type="button" class="btn btn-default"  ng-click="vm.randomizeBackground('flaw')"><i class="fa fa-random"></i></button>
     </span>
   </p>
 </div>
@@ -56,7 +56,7 @@
 <hr />
 <div class="row">
   <div class="form-group" show-errors>
-    <label class="control-label" for="background.flaw">Character History</label>
+    <label class="control-label">Character History</label>
     <textarea name="backstory" type="text" ng-model="vm.character.background.backstory" id="backstory" class="form-control" placeholder="Character History"></textarea>
   </div>
 </div>
