Mostly done with the Guild Member List page

--- a/modules/characters/client/views/list-characters.client.view.html
+++ b/modules/characters/client/views/list-characters.client.view.html
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col-sm-4"><b ng-bind="character.name"></b></div>
         <div class="col-sm-2" ng-bind="character.level"></div>
-        <div class="col-sm-2" ng-bind="character.playableClass[0].name"></div>
+        <div class="col-sm-2" ng-bind="character.playableClass[0]"></div>
         <div class="col-sm-2" ng-bind="character.race.name"></div>
         <div class="col-sm-2" ng-bind="character.numSessions"></div>
       </div>
