--- a/modules/characters/client/views/creationSteps/character.creation.basics.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.basics.view.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="form-group col-md-10" show-errors>
-    <label class="control-label" for="name">Character's Name</label>
-    <input name="name" type="text" ng-model="vm.character.name" id="name" class="form-control" placeholder="Name" required>
+    <label class="control-label">Character's Name</label>
+    <input type="text" ng-model="vm.character.name" id="name" class="form-control" placeholder="Name" required>
     <div ng-messages="vm.form.characterForm.name.$error" role="alert">
       <p class="help-block error-text" ng-message="required">Character name is required.</p>
     </div>
@@ -24,7 +24,7 @@
 
   <div class="col-md-offset-1 col-md-4">
       <div class="form-group" show-errors>
-          <label class="control-label" for="playableClass">Character Class</label>
+          <label class="control-label">Character Class</label>
           <div class="dropdown" dropdown>
             <button type="button" class="btn btn-default" dropdown-toggle>
               {{vm.character.playableClass[0].profession.name}} <span class="caret"></span></button>
