--- a/modules/characters/client/views/list-characters.client.view.html
+++ b/modules/characters/client/views/list-characters.client.view.html
@@ -9,20 +9,24 @@
   <div class="list-group">
     <div class="row">
       <div class="col-sm-4"><b>Character Name</b></div>
-      <div class="col-sm-2"><b>Level</b></div>
+      <div class="col-sm-2 text-center"><b>Level</b></div>
       <div class="col-sm-2"><b>Class</b></div>
       <div class="col-sm-2"><b>Race</b></div>
-      <div class="col-sm-2"><b>Sessions</b></div>
+      <div class="col-sm-2 text-center"><b>Sessions</b></div>
     </div>
     <a data-ng-repeat="character in vm.characters"
        data-ui-sref="characters.view({ characterId: character._id })"
        class="list-group-item">
       <div class="row">
         <div class="col-sm-4"><b ng-bind="character.name"></b></div>
-        <div class="col-sm-2" ng-bind="character.level"></div>
-        <div class="col-sm-2" ng-bind="character.playableClass[0]"></div>
+        <div class="col-sm-2 text-center" ng-bind="character.level"></div>
+        <div class="col-sm-2">
+          <div ng-repeat="prof in character.playableClass">
+            <p>{{prof.profession.name}} {{prof.level}}</p>
+          </div>
+        </div>
         <div class="col-sm-2" ng-bind="character.race.name"></div>
-        <div class="col-sm-2" ng-bind="character.numSessions"></div>
+        <div class="col-sm-2 text-center" ng-bind="character.numSessions"></div>
       </div>
     </a>
   </div>
