--- a/modules/characters/client/views/creationSteps/character.creation.basics.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.basics.view.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="form-group col-md-10" show-errors>
+  <div class="form-group col-md-10">
     <label class="control-label">Character's Name</label>
-    <input type="text" ng-model="vm.character.name" id="name" class="form-control" placeholder="Name" required>
+    <input type="text" ng-model="vm.character.name" class="form-control" placeholder="Name" required>
     <div ng-messages="vm.form.characterForm.name.$error" role="alert">
       <p class="help-block error-text" ng-message="required">Character name is required.</p>
     </div>
@@ -23,7 +23,7 @@
   </div>
 
   <div class="col-md-offset-1 col-md-4">
-      <div class="form-group" show-errors>
+      <div class="form-group">
           <label class="control-label">Character Class</label>
           <div class="dropdown" dropdown>
             <button type="button" class="btn btn-default" dropdown-toggle>
@@ -39,8 +39,8 @@
 </div>
 
 <div class="row">
-  <div class="form-group col-md-10" show-errors>
+  <div class="form-group col-md-10">
       <label class="control-label" for="appearance">Character Appearance</label><br />
-    <textarea name="appearance" type="text" ng-model="vm.character.background.appearance" id="appearance" class="form-control" placeholder="Character Appearance"></textarea>
+    <textarea name="appearance" type="text" ng-model="vm.character.background.appearance" class="form-control" placeholder="Character Appearance"></textarea>
   </div>
 </div>
