--- a/modules/characters/client/views/creationSteps/character.creation.attributes.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.attributes.view.html
@@ -263,7 +263,7 @@
 </div>
 
 <!-- Proficiencies -->
-<div class="row">
+<div class="row"  class="underlined-row">
   <div class="col-xs-offset-3 col-xs-3">
     <b>Save Mod</b>
   </div>
@@ -272,7 +272,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row underlined-row">
   <div class="col-xs-3">
     Strength
   </div>
@@ -284,7 +284,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row underlined-row">
   <div class="col-xs-3">
     Dexterity
   </div>
@@ -298,7 +298,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row underlined-row">
   <div class="col-xs-3">
     Constitution
   </div>
@@ -309,7 +309,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row underlined-row">
   <div class="col-xs-3">
     Intelligence
   </div>
@@ -325,7 +325,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row underlined-row">
   <div class="col-xs-3">
     Wisdom
   </div>
