--- a/modules/characters/client/css/characterCreation.css
+++ b/modules/characters/client/css/characterCreation.css
@@ -36,8 +36,7 @@
   padding-bottom: 4px;
 }
 
-.underlined-row {
-   border-bottom-style: solid;
-   border-width: 1px;
-   border-color: dark-gray;
+.check-no-margin {
+  margin-top: 0;
+  margin-bottom: 0;
 }
