--- a/modules/characters/client/views/creationSteps/character.creation.attributes.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.attributes.view.html
@@ -9,8 +9,8 @@
 
     <div class="row att-row">
       <!-- Label -->
-      <div class="col-sm-2 hidden-xs" tooltip="Strength measures your character's muscle and physical power">
-        Strength
+      <div class="col-sm-2 hidden-xs">
+        <span tooltip="Strength measures your character's muscle and physical power">Strength</span>
       </div>
 
       <div class="col-xs-2 visible-xs">STR</div>
@@ -55,8 +55,8 @@
     </div>
 
     <div class="row att-row">
-      <div class="col-sm-2 hidden-xs" tooltip="Dexterity measures agility, reflexes, and balanc">
-        Dexterity
+      <div class="col-sm-2 hidden-xs">
+        <span tooltip="Dexterity measures agility, reflexes, and balance">Dexterity</span>
       </div>
       <div class="col-xs-2 visible-xs">DEX</div>
       <div class="col-xs-4 text-center">
@@ -261,97 +261,4 @@
       <p>You have <b>{{vm.points}}</b> points available.</p>
     </div>
 </div>
-
-<!-- Proficiencies -->
-<div class="row"  class="underlined-row">
-  <div class="col-xs-offset-3 col-xs-3">
-    <b>Save Mod</b>
-  </div>
-  <div class="col-xs-4">
-    <b>Skills</b>
-  </div>
-</div>
-
-<div class="row underlined-row">
-  <div class="col-xs-3">
-    Strength
-  </div>
-  <div class="col-xs-3">
-    {{vm.getSaveMod('Strength')}}
-  </div>
-  <div class="col-xs-4">
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Athletics</div>
-  </div>
-</div>
-
-<div class="row underlined-row">
-  <div class="col-xs-3">
-    Dexterity
-  </div>
-  <div class="col-xs-3">
-    {{vm.getSaveMod('Dexterity')}}
-  </div>
-  <div class="col-xs-4">
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Acrobatics</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Sleight of Hand</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Stealth</div>
-  </div>
-</div>
-
-<div class="row underlined-row">
-  <div class="col-xs-3">
-    Constitution
-  </div>
-  <div class="col-xs-3">
-    {{vm.getSaveMod('Constitution')}}
-  </div>
-  <div class="col-xs-4">
-  </div>
-</div>
-
-<div class="row underlined-row">
-  <div class="col-xs-3">
-    Intelligence
-  </div>
-  <div class="col-xs-3">
-    {{vm.getSaveMod('Intelligence')}}
-  </div>
-  <div class="col-xs-4">
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Arcana</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> History</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Investigation</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Nature</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Religion</div>
-  </div>
-</div>
-
-<div class="row underlined-row">
-  <div class="col-xs-3">
-    Wisdom
-  </div>
-  <div class="col-xs-3">
-    {{vm.getSaveMod('Wisdom')}}
-  </div>
-  <div class="col-xs-4">
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Animal Handling</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Insight</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Medicine</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Perception</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Survival</div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-xs-3">
-    Charisma
-  </div>
-  <div class="col-xs-3">
-    {{vm.getSaveMod('Charisma')}}
-  </div>
-  <div class="col-xs-4">
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Deception</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Intimidation</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Performance</div>
-     <div style="margin-top: 0; margin-bottom: 0;" class="checkbox"><input type="checkbox"> Persuasion</div>
-  </div>
-</div>
+<div ng-include="'modules/characters/client/views/creationSteps/character.creation.skills.view.html'"></div>
