--- a/modules/characters/client/views/creationSteps/character.creation.basics.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.basics.view.html
@@ -1,4 +1,8 @@
 <div class="row">
+  <h1>Character Creation</h1>
+</div>
+
+<div class="row">
   <div class="form-group col-md-10">
     <label class="control-label">Character's Name</label>
     <input type="text" ng-model="vm.character.name" class="form-control" placeholder="Name" required>
