Created sources client service for static sources

--- a/modules/characters/client/views/creationSteps/character.creation.skills.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.skills.view.html
@@ -1,15 +1,9 @@
 <!-- Proficiencies -->
 <div class="list-group">
   <div class="row list-group-item">
-    <div class="col-xs-3">
-      <b>Attribute</b>
-    </div>
-    <div class="col-xs-3">
-      <b>Save Mod</b>
-    </div>
-    <div class="col-xs-offset-2 col-xs-4">
-      <b>Skills</b>
-    </div>
+    <div class="col-xs-3"><b>Attribute</b></div>
+    <div class="col-xs-3"><b>Save Mod</b></div>
+    <div class="col-xs-offset-2 col-xs-4"><b>Skills</b></div>
   </div>
 
   <div ng-repeat="attribute in vm.skills" class="row list-group-item">
