Massively cleaned up Attributes step in character creation

--- a/modules/characters/client/views/creationSteps/character.creation.attributes.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.attributes.view.html
@@ -1,264 +1,7 @@
 <div class="form-group">
-
-  <div class="row">
-    <div class="col-xs-2"><b>Attribute</b></div>
-    <div class="col-xs-4 text-center"><b>Raw Score</b></div>
-    <div class="col-xs-3 text-center"><b>Racial Bonus</b></div>
-    <div class="col-xs-3 text-center"><b>Result</b></div>
-  </div>
-
-    <div class="row att-row">
-      <!-- Label -->
-      <div class="col-sm-2 hidden-xs">
-        <span tooltip="Strength measures your character's muscle and physical power">Strength</span>
-      </div>
-
-      <div class="col-xs-2 visible-xs">STR</div>
-
-      <!-- Point Buy -->
-      <div class="col-xs-4 text-center">
-        <div class="input-group" ng-init="vm.character.attributes.Strength=8">
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Strength = vm.removePoint(vm.character.attributes.Strength)"
-                class="btn btn-default" ><i class="fa fa-minus"></i></button>
-          </span>
-          <input type="number"
-                ng-model="vm.character.attributes.Strength"
-                class="text-center att-entry form-control"
-                disabled></input>
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Strength = vm.addPoint(vm.character.attributes.Strength)"
-                class="btn btn-default" ><i class="fa fa-plus"></i></button>
-          </span>
-        </div>
-      </div>
-
-      <!-- Racial Bonus -->
-      <div class="col-xs-3 text-center">
-        <!-- Check to see if there is a defined racial bonus-->
-        <div ng-if="vm.character.race.abilityIncreases.Strength > 0">
-          + {{vm.character.race.abilityIncreases.Strength}}
-        </div>
-        <div ng-if="vm.character.race.abilityIncreases.Strength <= 0">
-          <div ng-if="vm.character.race.abilityIncreases.Choice > 0">
-            +{{vm.character.race.abilityIncreases.Choice}} <input <input type="radio" name="attChoice">
-          </div>
-        </div>
-      </div>
-
-      <!-- Total -->
-      <div class="col-xs-3 text-center">
-        {{vm.getActualValue('Strength')}} ({{vm.toModifier(vm.getActualValue('Strength'))}})
-      </div>
-    </div>
-
-    <div class="row att-row">
-      <div class="col-sm-2 hidden-xs">
-        <span tooltip="Dexterity measures agility, reflexes, and balance">Dexterity</span>
-      </div>
-      <div class="col-xs-2 visible-xs">DEX</div>
-      <div class="col-xs-4 text-center">
-        <div class="input-group" ng-init="vm.character.attributes.Dexterity=8">
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Dexterity = vm.removePoint(vm.character.attributes.Dexterity)"
-                class="btn btn-default" ><i class="fa fa-minus"></i></button>
-          </span>
-          <input type="number"
-                ng-model="vm.character.attributes.Dexterity"
-                class="text-center att-entry form-control"
-                disabled></input>
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Dexterity = vm.addPoint(vm.character.attributes.Dexterity)"
-                class="btn btn-default" ><i class="fa fa-plus"></i></button>
-          </span>
-        </div>
-      </div>
-
-      <!-- Racial Bonus -->
-      <div class="col-xs-3 text-center">
-        <!-- Check to see if there is a defined racial bonus-->
-        <div ng-if="vm.character.race.abilityIncreases.Dexterity > 0">
-          + {{vm.character.race.abilityIncreases.Dexterity}}
-        </div>
-        <div ng-if="vm.character.race.abilityIncreases.Dexterity <= 0">
-          <div ng-if="vm.character.race.abilityIncreases.Choice > 0">
-            +{{vm.character.race.abilityIncreases.Choice}} <input <input type="radio" name="attChoice">
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-3 text-center">
-        {{vm.getActualValue('Dexterity')}} ({{vm.toModifier(vm.getActualValue('Dexterity'))}})
-      </div>
-    </div>
-
-    <div class="row att-row">
-      <div class="col-sm-2 hidden-xs" tooltip="Constitution represents your character's health and stamina">
-        Constitution
-      </div>
-      <div class="col-xs-2 visible-xs">CON</div>
-      <div class="col-xs-4 text-center">
-        <div class="input-group" ng-init="vm.character.attributes.Constitution=8">
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Constitution = vm.removePoint(vm.character.attributes.Constitution)"
-                class="btn btn-default" ><i class="fa fa-minus"></i></button>
-          </span>
-          <input type="number"
-                ng-model="vm.character.attributes.Constitution"
-                class="text-center att-entry form-control"
-                disabled></input>
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Constitution = vm.addPoint(vm.character.attributes.Constitution)"
-                class="btn btn-default" ><i class="fa fa-plus"></i></button>
-          </span>
-        </div>
-      </div>
-      <!-- Racial Bonus -->
-      <div class="col-xs-3 text-center">
-        <!-- Check to see if there is a defined racial bonus-->
-        <div ng-if="vm.character.race.abilityIncreases.Constitution > 0">
-          + {{vm.character.race.abilityIncreases.Constitution}}
-        </div>
-        <div ng-if="vm.character.race.abilityIncreases.Constitution <= 0">
-          <div ng-if="vm.character.race.abilityIncreases.Choice > 0">
-            +{{vm.character.race.abilityIncreases.Choice}} <input <input type="radio" name="attChoice">
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-3 text-center">
-        {{vm.getActualValue('Constitution')}} ({{vm.toModifier(vm.getActualValue('Constitution'))}})
-      </div>
-    </div>
-
-
-    <div class="row att-row">
-      <div class="col-sm-2 hidden-xs" tooltip="Intelligence determines how well your character learns/reasons">
-        Intelligence
-      </div>
-      <div class="col-xs-2 visible-xs">INT</div>
-      <div class="col-xs-4 text-center">
-        <div class="input-group" ng-init="vm.character.attributes.Intelligence=8">
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Intelligence = vm.removePoint(vm.character.attributes.Intelligence)"
-                class="btn btn-default" ><i class="fa fa-minus"></i></button>
-          </span>
-          <input type="number"
-                ng-model="vm.character.attributes.Intelligence"
-                class="text-center att-entry form-control"
-                disabled></input>
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Intelligence = vm.addPoint(vm.character.attributes.Intelligence)"
-                class="btn btn-default" ><i class="fa fa-plus"></i></button>
-          </span>
-        </div>
-      </div>
-      <!-- Racial Bonus -->
-      <div class="col-xs-3 text-center">
-        <!-- Check to see if there is a defined racial bonus-->
-        <div ng-if="vm.character.race.abilityIncreases.Intelligence > 0">
-          + {{vm.character.race.abilityIncreases.Intelligence}}
-        </div>
-        <div ng-if="vm.character.race.abilityIncreases.Intelligence <= 0">
-          <div ng-if="vm.character.race.abilityIncreases.Choice > 0">
-            +{{vm.character.race.abilityIncreases.Choice}} <input <input type="radio" name="attChoice">
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-3 text-center">
-        {{vm.getActualValue('Intelligence')}} ({{vm.toModifier(vm.getActualValue('Intelligence'))}})
-      </div>
-    </div>
-
-    <div class="row att-row">
-      <div class="col-sm-2 hidden-xs" tooltip="Wisdom measures willpower, sense, and intuition">
-        Wisdom
-      </div>
-      <div class="col-xs-2 visible-xs">WIS</div>
-      <div class="col-xs-4 text-center">
-        <div class="input-group" ng-init="vm.character.attributes.Wisdom=8">
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Wisdom = vm.removePoint(vm.character.attributes.Wisdom)"
-                class="btn btn-default" ><i class="fa fa-minus"></i></button>
-          </span>
-          <input type="number"
-                ng-model="vm.character.attributes.Wisdom"
-                class="text-center att-entry form-control"
-                disabled></input>
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Wisdom = vm.addPoint(vm.character.attributes.Wisdom)"
-                class="btn btn-default" ><i class="fa fa-plus"></i></button>
-          </span>
-        </div>
-      </div>
-      <!-- Racial Bonus -->
-      <div class="col-xs-3 text-center">
-        <!-- Check to see if there is a defined racial bonus-->
-        <div ng-if="vm.character.race.abilityIncreases.Wisdom > 0">
-          + {{vm.character.race.abilityIncreases.Wisdom}}
-        </div>
-        <div ng-if="vm.character.race.abilityIncreases.Wisdom <= 0">
-          <div ng-if="vm.character.race.abilityIncreases.Choice > 0">
-            +{{vm.character.race.abilityIncreases.Choice}} <input <input type="radio" name="attChoice">
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-3 text-center">
-        {{vm.getActualValue('Wisdom')}} ({{vm.toModifier(vm.getActualValue('Wisdom'))}})
-      </div>
-    </div>
-
-    <div class="row att-row">
-      <div class="col-sm-2 hidden-xs" tooltip="Charisma measures your character's force of personality upon others">
-        Charisma
-      </div>
-      <div class="col-xs-2 visible-xs">CHA</div>
-      <div class="col-xs-4 text-center">
-        <div class="input-group" ng-init="vm.character.attributes.Charisma=8">
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Charisma = vm.removePoint(vm.character.attributes.Charisma)"
-                class="btn btn-default" ><i class="fa fa-minus"></i></button>
-          </span>
-          <input type="number"
-                ng-model="vm.character.attributes.Charisma"
-                class="text-center att-entry form-control"
-                disabled></input>
-          <span class="input-group-btn">
-            <button type="button"
-                ng-click="vm.character.attributes.Charisma = vm.addPoint(vm.character.attributes.Charisma)"
-                class="btn btn-default" ><i class="fa fa-plus"></i></button>
-          </span>
-        </div>
-      </div>
-      <!-- Racial Bonus -->
-      <div class="col-xs-3 text-center">
-        <!-- Check to see if there is a defined racial bonus-->
-        <div ng-if="vm.character.race.abilityIncreases.Charisma > 0">
-          + {{vm.character.race.abilityIncreases.Charisma}}
-        </div>
-        <div ng-if="vm.character.race.abilityIncreases.Charisma <= 0">
-          <div ng-if="vm.character.race.abilityIncreases.Choice > 0">
-            +{{vm.character.race.abilityIncreases.Choice}} <input <input type="radio" name="attChoice">
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-3 text-center">
-        {{vm.getActualValue('Charisma')}} ({{vm.toModifier(vm.getActualValue('Charisma'))}})
-      </div>
-    </div>
-
+  <div ng-include="'modules/characters/client/views/creationSteps/character.creation.attributes.subview.html'"></div>
     <div class="row text-center">
       <p>You have <b>{{vm.points}}</b> points available.</p>
     </div>
 </div>
-<div ng-include="'modules/characters/client/views/creationSteps/character.creation.skills.view.html'"></div>
+<div ng-include="'modules/characters/client/views/creationSteps/character.creation.skills.subview.html'"></div>
