--- a/modules/characters/client/views/creationSteps/character.creation.skills.subview.html
+++ b/modules/characters/client/views/creationSteps/character.creation.skills.subview.html
@@ -14,8 +14,11 @@
         <div class="col-xs-2">
           <input type="checkbox"
             ng-model="attsEnabled[skill]"
-            ng-if="vm.character.playableClass[0].profession.skillProficiencies.indexOf(skill) > -1"
-            ng-disabled="vm.character.skills.indexOf(skill) === -1 && vm.character.skills.length >= vm.character.playableClass[0].profession.numSkillProficiencies"
+            ng-if="vm.character.playableClass[0].profession.skillProficiencies.indexOf(skill) > -1
+                  || (vm.character.race.numSkillProficiencies > 0 && vm.character.skills.length < vm.character.race.numSkillProficiencies)
+                  || vm.character.skills.indexOf(skill) > -1"
+            ng-disabled="vm.character.skills.indexOf(skill) === -1
+                  && vm.character.skills.length >= vm.numberProficiencies()"
             ng-click="vm.toggleProficiency(skill)">
         </div>
         <div class="col-xs-2">({{vm.getSkillMod(skill, attribute.name)}})</div>
