--- a/modules/races/client/views/form-race.client.view.html
+++ b/modules/races/client/views/form-race.client.view.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <section>
   <div class="page-header">
     <h1>{{vm.race._id ? 'Edit Race' : 'New Race'}}</h1>
@@ -16,6 +17,25 @@
                   ng-click="$event.stopPropagation()"
                   required>
           </div>
+          <div class="col-sm-offset-3 col-sm-2">
+            <label class="control-label"># Skill Proficiencies</label>
+             <div class="input-group">
+               <span class="input-group-btn">
+                 <button type="button"
+                     ng-disabled="vm.race.numSkillProficiencies === 0"
+                     ng-click="vm.race.numSkillProficiencies = vm.race.numSkillProficiencies - 1"
+                     class="btn btn-default" ><i class="fa fa-minus"></i></button>
+               </span>
+               <input type="number"
+                     ng-model="vm.race.numSkillProficiencies"
+                     class="text-center att-entry form-control"></input>
+               <span class="input-group-btn">
+                 <button type="button"
+                     ng-click="vm.race.numSkillProficiencies = vm.race.numSkillProficiencies + 1"
+                     class="btn btn-default" ><i class="fa fa-plus"></i></button>
+               </span>
+             </div>
+         </div>
         </div>
 
         <div class="row">
