Added a lot more help to the character creation

--- a/modules/characters/client/views/creationHelp/character.creation.attributes.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.attributes.help.view.html
@@ -1,4 +1,6 @@
 <p>Here you will select how your attributes are distributed through the use of the point buy system, as well as choose in which skills your character will be proficient.</p>
-<br>
 <h4>Point Buy</h4>
-<p>All about point buy</p>
+<p>Here you will select your attributes using the <i class="fa fa-plus"></i> and <i class="fa fa-minus"></i> buttons to adjust each score. Hover over the names to see more details about each. Each adjustment costs 1 point except for 13->14 and 14->15, which each cost 2 points. Afterwards, your race's ability bonuses are incorporated for a final score.</p>
+<h4>Skills</h4>
+<p>Skills determine how well your character is able to perform certain tasks, such as persuading people to his cause or healing others. Your race and class each dictate how many and in which skills you may become proficient. Proficiency in a skill adds a certain bonus modifier to all skill checks of that type; this bonus is a function of your level and starts at +2. If your race provides additional proficiencies, choose those first, then your profession's skills will be the only ones to remain available for selection past that.</p>
+<p>For more information on a skill, mouse-over the skill for a brief description of each.</p>
