--- a/modules/characters/client/views/creationHelp/character.creation.inventory.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.inventory.help.view.html
@@ -1,29 +1,32 @@
-<div class="row">
-  Remaining funds: {{vm.character.funds}} ℝ
-</div>
-<br>
-<div ng-if="vm.character.items.length > 0">
-  <div class="row"><b>
-    <div class="col-sm-4">Name</div>
-    <div class="col-sm-4">Type</div>
-    <div class="col-sm-4">Price</div>
-  </b></div>
-  <div style="border-bottom-style: solid; border-top-style: solid; border-width: 1px; border-color: dark-gray;">
-    <div class="row" ng-repeat="item in vm.character.items">
+<h4>Item Purchasing</h4>
+<p>Here you will select your starting inventory. Some items come pre-added thanks in part to your race, profession, and background. You also have a certain amount of funds available to you dictacted by your class or background, whichever is greater.</p>
+<div class="col-xs-12">
+  <div class="row">
+    <b>Remaining funds: {{vm.character.funds}} ℝ</b>
+  </div>
+  <br>
+  <div class="list-group" ng-if="vm.character.items.length > 0">
+    <div class="row"><b>
+      <div class="col-sm-4">Name</div>
+      <div class="col-sm-4">Type</div>
+      <div class="col-sm-4">Price</div>
+    </b></div>
+    <div class="list-group-item row" ng-repeat="item in vm.character.items">
       <div class="col-sm-4" ng-bind="item.name"></div>
       <div class="col-sm-4" ng-bind="item.classification"></div>
-      <div class="col-sm-4">{{item.price}} ℝ</div>
+      <div class="col-sm-3">{{item.price}} ℝ</div>
+      <div class="col-sm-1" ng-click="vm.toggleItem(item)">
+        <span class="glyphicon glyphicon-minus-sign can-select" aria-hidden="true"></span>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <i>
-      <div class="col-sm-4">Total</div>
-      <div class="col-sm-4 col-sm-offset-4">{{vm.sumInventoryPrice()}} ℝ</div>
-    </i>
-  </div>
-</div>
-<br>
-<div ng-if="vm.infoItem">
-  <h5>{{vm.infoItem.name}}</h5>
-  <p>{{vm.infoItem.description}}</p>
+  <br>
+  <div ng-if="vm.infoItem">
+    <div class="row">
+      <div class="col-xs-1 glyphicon glyphicon-info-sign"></div>
+      <div class="col-xs-11">
+        <b>{{vm.infoItem.name}}</b>
+        <p>{{vm.infoItem.description}}</p>
+      </div>
+    </div>
 </div>
