--- a/modules/characters/client/views/creationHelp/character.creation.inventory.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.inventory.help.view.html
@@ -8,13 +8,16 @@
   <div class="list-group" ng-if="vm.character.items.length > 0">
     <div class="row"><b>
       <div class="col-sm-4">Name</div>
-      <div class="col-sm-4">Type</div>
-      <div class="col-sm-4">Price</div>
+      <div class="col-sm-3">Type</div>
+      <div class="col-sm-3">Price</div>
     </b></div>
     <div class="list-group-item row" ng-repeat="item in vm.character.items">
       <div class="col-sm-4" ng-bind="item.name"></div>
-      <div class="col-sm-4" ng-bind="item.classification"></div>
+      <div class="col-sm-3" ng-bind="item.classification"></div>
       <div class="col-sm-3">{{item.price}} ℝ</div>
+      <div class="col-sm-1" ng-click="vm.infoItem = item">
+        <span class="glyphicon glyphicon-info-sign can-select" aria-hidden="true"></span>
+      </div>
       <div class="col-sm-1" ng-click="vm.toggleItem(item)">
         <span class="glyphicon glyphicon-minus-sign can-select" aria-hidden="true"></span>
       </div>
