--- a/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
@@ -1,3 +1,5 @@
+<h3>Consultants and Dragons Guild Shoppe</h3>
+
 <div class="row">
   <div class="col-sm-4"><b>Name</b></div>
   <div class="col-sm-3"><b>Type</b></div>
@@ -12,7 +14,7 @@
     <div class="col-sm-3" ng-bind="item.classification"></div>
     <div class="col-sm-3">{{item.price}} riphons</div>
     <div class="col-sm-1" ng-click="vm.infoItem = item">
-      <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-info-sign can-select" aria-hidden="true"></span>
     </div>
     <div class="col-sm-1" ng-click="vm.toggleItem(item)">
       <span class="glyphicon"
