Added Inventory subview for character sheet

--- a/modules/characters/client/views/character-sheet/skills.subview.html
+++ b/modules/characters/client/views/character-sheet/skills.subview.html
@@ -1,6 +1,6 @@
-<!-- Proficiencies -->
+<h3>Stats and Skils</h3>
 <div class="list-group">
-  <div class="row list-group-item">
+  <div class="row">
     <div class="col-sm-3"><b>Attribute</b></div>
     <div class="col-sm-2 text-center"><b>Modifier</b></div>
     <div class="col-sm-2 text-center"><b>Saves</b></div>
