--- a/modules/characters/client/views/view-character.client.view.html
+++ b/modules/characters/client/views/view-character.client.view.html
@@ -14,9 +14,12 @@
   </div>
 
   <div class="row">
-    <div class="col-md-offset-6 col-md-6">
+    <div class="col-md-6">
       <div ng-include="'modules/characters/client/views/character-sheet/skills.subview.html'"></div>
   </div>
+  <div class="col-md-6">
+    <div ng-include="'modules/characters/client/views/character-sheet/inventory.subview.html'"></div>
+</div>
 </div>
 
 </section>
