--- a/modules/characters/client/views/creationHelp/character.creation.inventory.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.inventory.help.view.html
@@ -1,35 +1,3 @@
 <h4>Item Purchasing</h4>
 <p>Here you will select your starting inventory. Some items come pre-added thanks in part to your race, profession, and background. You also have a certain amount of funds available to you dictacted by your class or background, whichever is greater.</p>
-<div class="col-xs-12">
-  <div class="row">
-    <b>Remaining funds: {{vm.character.funds}} ℝ</b>
-  </div>
-  <br>
-  <div class="list-group" ng-if="vm.character.items.length > 0">
-    <div class="row"><b>
-      <div class="col-sm-4">Name</div>
-      <div class="col-sm-3">Type</div>
-      <div class="col-sm-3">Price</div>
-    </b></div>
-    <div class="list-group-item row" ng-repeat="item in vm.character.items">
-      <div class="col-sm-4" ng-bind="item.name"></div>
-      <div class="col-sm-3" ng-bind="item.classification"></div>
-      <div class="col-sm-3">{{item.price}} ℝ</div>
-      <div class="col-sm-1" ng-click="vm.infoItem = item">
-        <span class="glyphicon glyphicon-info-sign can-select" aria-hidden="true"></span>
-      </div>
-      <div class="col-sm-1" ng-click="vm.toggleItem(item)">
-        <span class="glyphicon glyphicon-minus-sign can-select" aria-hidden="true"></span>
-      </div>
-    </div>
-  </div>
-  <br>
-  <div ng-if="vm.infoItem">
-    <div class="row">
-      <div class="col-xs-1 glyphicon glyphicon-info-sign"></div>
-      <div class="col-xs-11">
-        <b>{{vm.infoItem.name}}</b>
-        <p>{{vm.infoItem.description}}</p>
-      </div>
-    </div>
-</div>
+<div ng-include="'modules/characters/client/views/character-sheet/inventory.subview.html'"></div>
