--- a/modules/characters/client/views/creationSteps/character.creation.background.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.background.view.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <div class="row form-group">
-    <label class="control-label">Background</label>
+    <label class="control-label">Background Generalization</label>
     <div class="dropdown" dropdown>
       <button type="button" class="btn btn-default" dropdown-toggle>
         {{vm.chosenBackground.name}} <span class="caret"></span></button>
@@ -57,6 +57,6 @@
 <div class="row">
   <div class="form-group">
     <label class="control-label">Character History</label>
-    <textarea name="backstory" type="text" ng-model="vm.character.background.backstory" id="backstory" class="form-control" placeholder="Character History"></textarea>
+    <textarea name="backstory" type="text" ng-model="vm.character.background.backstory" rows="10" class="form-control" placeholder="Character History"></textarea>
   </div>
 </div>
