Improvements to character sheet

--- a/modules/characters/client/views/character-sheet/skills.subview.html
+++ b/modules/characters/client/views/character-sheet/skills.subview.html
@@ -1,4 +1,6 @@
-<h3>Stats and Skils</h3>
+<div class="row">
+  <div class="col-xs-6"><h4>Stats and Skills</h4></div>
+</div>
 <div class="list-group">
   <div class="row">
     <div class="col-sm-3"><b>Attribute</b></div>
