--- a/modules/characters/client/views/character-sheet/inventory.subview.html
+++ b/modules/characters/client/views/character-sheet/inventory.subview.html
@@ -1,5 +1,7 @@
-<div class="col-xs-12">
-  <h3>Inventory</h3>
+<div class="row">
+  <div class="col-xs-6"><h4>Inventory</h4></div>
+  <div class="col-xs-6 text-right"><h5>Funds: {{vm.character.funds}}</h5></div>
+</div>
   <div class="list-group" ng-if="vm.character.items.length > 0">
     <div class="row"><b>
       <div class="col-sm-4">Name</div>
@@ -21,12 +23,12 @@
     </div>
   </div>
   <br>
-  <div ng-if="vm.infoItem">
-    <div class="row">
-      <div class="col-xs-1 glyphicon glyphicon-info-sign"></div>
+  <div ng-if="vm.infoItem" class="well">
+    <div class="row" style="margin-top: 4px; margin-bottom: 0;">
+      <div class="col-xs-1 glyphicon glyphicon-info-sign" style="margin-top: 12px"></div>
       <div class="col-xs-11">
-        <b>{{vm.infoItem.name}}</b>
-        <p>{{vm.infoItem.description}}</p>
+        <h5><b>{{vm.infoItem.name}}</b></h5>
+        {{vm.infoItem.description}}
       </div>
     </div>
 </div>
