--- a/modules/characters/client/views/view-character.client.view.html
+++ b/modules/characters/client/views/view-character.client.view.html
@@ -17,7 +17,7 @@
     <div class="col-md-6">
       <div ng-include="'modules/characters/client/views/character-sheet/skills.subview.html'"></div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-offset-1 col-md-5">
     <div ng-include="'modules/characters/client/views/character-sheet/inventory.subview.html'"></div>
 </div>
 </div>
