--- a/modules/characters/client/views/creationSteps/character.creation.attributes.subview.html
+++ b/modules/characters/client/views/creationSteps/character.creation.attributes.subview.html
@@ -34,14 +34,18 @@
   </div>
 
   <!-- Racial Bonus -->
-  <div class="col-xs-3 text-center">
-    <!-- Check to see if there is a defined racial bonus-->
-    <div ng-if="vm.character.race.abilityIncreases[attribute.name] > 0">
-      + {{vm.character.race.abilityIncreases[attribute.name]}}
+  <div class="col-xs-3">
+    <div class="row" ng-if="vm.character.race.abilityIncreases[attribute.name] > 0">
+      <div class="col-xs-offset-5 col-xs-7" style="text-left">
+        +{{vm.character.race.abilityIncreases[attribute.name]}}
+      </div>
     </div>
-    <div ng-if="vm.character.race.abilityIncreases[attribute.name] <= 0">
+    <div class="row" ng-if="vm.character.race.abilityIncreases[attribute.name] <= 0">
       <div ng-if="vm.character.race.abilityIncreases.Choice > 0">
-        <input type="radio" ng-model="racialBonusIs[attribute.name]" ng-click="vm.racialBonus = attribute.name" name="attChoice"> +{{vm.character.race.abilityIncreases.Choice}} 
+        <div class="col-xs-offset-2 col-xs-3 text-right" style="margin-top: 2px;">
+          <input type="radio" ng-model="racialBonusIs[attribute.name]" ng-click="vm.racialBonus = attribute.name" name="attChoice">
+        </div>
+        <span class="col-xs-7"> +{{vm.character.race.abilityIncreases.Choice}} </span>
       </div>
     </div>
   </div>
