--- a/modules/characters/client/views/creationSteps/character.creation.skills.subview.html
+++ b/modules/characters/client/views/creationSteps/character.creation.skills.subview.html
@@ -7,7 +7,12 @@
   </div>
 
   <div ng-repeat="attribute in vm.skills" class="row list-group-item">
-    <div class="col-sm-3" ng-bind="attribute.name"></div>
+    <div class="col-sm-3">
+      <b ng-if="vm.character.playableClass[0].profession.saveProficiencies.indexOf(attribute.name) > -1">
+        {{attribute.name}}*
+      </b>
+      <span ng-if="vm.character.playableClass[0].profession.saveProficiencies.indexOf(attribute.name) === -1" ng-bind="attribute.name"></span>
+    </div>
     <div class="col-sm-3" ng-bind="vm.getSaveMod(attribute.name)"></div>
     <div class="col-sm-6">
       <div ng-repeat="skill in attribute.skills" class="row">
